gccida/c0/check_node_dependence
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1110:30: error: unknown type name 'def_use_0'; did you mean 'def_use'?
void  check_node_dependence( def_use_0 *du) 
                             ^~~~~~~~~
                             def_use
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:102:3: note: 'def_use' declared here
} def_use;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1121:1: error: unknown type name 'dependence_0'; did you mean 'dependence'?
dependence_0 *dep_root_ptr; // [rsp+10h] [rbp-940h] 
^~~~~~~~~~~~
dependence
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:151:3: note: 'dependence' declared here
} dependence;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1124:1: error: must use 'enum' tag to refer to type 'complexity_type'
complexity_type complexity[13]; // [rsp+20h] [rbp-930h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1125:1: error: must use 'enum' tag to refer to type 'direction_type'
direction_type direction[13][13]; // [rsp+60h] [rbp-8F0h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1132:1: error: unknown type name 'loop_1'; did you mean 'loop'?
loop_1 *ck_loop_ptr; // [rsp+5D0h] [rbp-380h] 
^~~~~~
loop
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:123:3: note: 'loop' declared here
} loop;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1133:1: error: unknown type name 'loop_1'; did you mean 'loop'?
loop_1 *loop_ptr; // [rsp+5D8h] [rbp-378h] 
^~~~~~
loop
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:123:3: note: 'loop' declared here
} loop;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1134:1: error: unknown type name 'subscript_0'; did you mean 'subscript'?
subscript_0 ocoefficients[13]; // [rsp+5E0h] [rbp-370h] BYREF 
^~~~~~~~~~~
subscript
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:168:3: note: 'subscript' declared here
} subscript;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1135:1: error: unknown type name 'subscript_0'; did you mean 'subscript'?
subscript_0 icoefficients[13]; // [rsp+780h] [rbp-1D0h] BYREF 
^~~~~~~~~~~
subscript
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:168:3: note: 'subscript' declared here
} subscript;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1136:1: error: unknown type name 'dependence_0'; did you mean 'dependence'?
dependence_0 *dep_list; // [rsp+928h] [rbp-28h] 
^~~~~~~~~~~~
dependence
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:151:3: note: 'dependence' declared here
} dependence;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1137:1: error: unknown type name 'dependence_0'; did you mean 'dependence'?
dependence_0 *dep_ptr; // [rsp+930h] [rbp-20h] 
^~~~~~~~~~~~
dependence
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:151:3: note: 'dependence' declared here
} dependence;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1138:1: error: unknown type name 'def_use_0'; did you mean 'def_use'?
def_use_0 *use_ptr; // [rsp+938h] [rbp-18h] 
^~~~~~~~~
def_use
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:102:3: note: 'def_use' declared here
} def_use;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1139:1: error: unknown type name 'def_use_0'; did you mean 'def_use'?
def_use_0 *def_ptr; // [rsp+940h] [rbp-10h] 
^~~~~~~~~
def_use
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:102:3: note: 'def_use' declared here
} def_use;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1140:1: error: unknown type name 'def_use_0'; did you mean 'def_use'?
def_use_0 *dua; // [rsp+948h] [rbp-8h] 
^~~~~~~~~
def_use
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:102:3: note: 'def_use' declared here
} def_use;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1157:28: error: expected expression
for ( loop_ptr = ( loop_1 *)loop_chain->data.l[0]; ; loop_ptr = ( loop_1 *)loop_chain->data.l[loop_idx] ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1157:20: error: use of undeclared identifier 'loop_1'
for ( loop_ptr = ( loop_1 *)loop_chain->data.l[0]; ; loop_ptr = ( loop_1 *)loop_chain->data.l[loop_idx] ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1157:75: error: expected expression
for ( loop_ptr = ( loop_1 *)loop_chain->data.l[0]; ; loop_ptr = ( loop_1 *)loop_chain->data.l[loop_idx] ) 
                                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1157:67: error: use of undeclared identifier 'loop_1'
for ( loop_ptr = ( loop_1 *)loop_chain->data.l[0]; ; loop_ptr = ( loop_1 *)loop_chain->data.l[loop_idx] ) 
                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1157:76: error: expected ')'
for ( loop_ptr = ( loop_1 *)loop_chain->data.l[0]; ; loop_ptr = ( loop_1 *)loop_chain->data.l[loop_idx] ) 
                                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1157:5: note: to match this '('
for ( loop_ptr = ( loop_1 *)loop_chain->data.l[0]; ; loop_ptr = ( loop_1 *)loop_chain->data.l[loop_idx] ) 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/dependence.c:1167:57: error: expected expression
for ( ck_loop_ptr = loop_ptr; ; ck_loop_ptr = ( loop_1 *)loop_chain->data.l[loop_idx] ) 
                                                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_node_dependence/src/obj/dependence.o] Error 1
